tests/NormalTests/paczka1/fuzzy1/90096456.err
Error in line 4: L6BkhdJdRS4 S3!! 65,5
Error in line 3: S194 S194 99,6
Error in line 8: S194 S300 73,8
Error in line 28: Zq3NPgIPT S984 86,8
Error in line 15: tsG S194 3,1
